--- a/app/sass/_global.scss
+++ b/app/sass/_global.scss
@@ -296,7 +296,7 @@ h4{
   max-width: 76rem;
   margin: 0 auto;
   padding: 10rem 0;
-  font-size: 2rem;
+  font-size: 2.1rem;
   font-weight: 300;
   line-height: 1.6;
 
