--- a/app/sass/_placeholders.scss
+++ b/app/sass/_placeholders.scss
@@ -8,6 +8,9 @@
   font-family:"Avenir","Helvetica Neue",Helvetica,Arial,sans-serif;
   font-style: normal;
 }
+%monospace{
+  font-family: 'Consolas', 'Monaco', 'Courier New', 'Courier', monospace;
+}
 %superscript{
   vertical-align: super;
   font-size: 80%;
